--- a/styles/Nav.css
+++ b/styles/Nav.css
@@ -152,9 +152,16 @@ nav.Blue{
 .sponsors{
     display: flex;
     width: 100%;
+    margin-top: 100px;
 }
 
 .spons{
     max-width: calc(100% / 8);
     aspect-ratio: 4/3;
+}
+
+.footer{
+    padding: 30px;
+    font-size: 12px;
+    margin-bottom: 30px;
 }
