agrega al laboratorio 5 lo asignado en el laboratorio 10, inserta contador dinamico en la pagina de productos y crea la clase Product-cart.js

--- a/styles/product_details.css
+++ b/styles/product_details.css
@@ -130,3 +130,10 @@ hr{
     width: calc(100% - 40px);
     margin: 0 10px;
 }
+
+
+.product-image a img {
+    display: block;
+    width: 340px;
+    aspect-ratio: 1/1;
+}
